#324 - UserServiceTest angepasst